# bridge_bot

./: .env.example  README.md  TODO.md  channel_routes.json  main.py  pyproject.toml
app/: __init__.py  config.py  container.py  db.py  diagnostics.py
bot/: __init__.py  client.py  commands.py
bot/bridge/: manager.py  messages.py  profiles.py  routes.py  routes_cli.py
docs/: bridge_configuration.md  bridge_draft.md  bridge_message_store.md
docs/guide/: bridge_schema.sql  postgresql_setup.md
docs/plan/: bridge_bot_fixes.md  postgresql_migration.md
supabase/: bridge_schema.sql
tests/: conftest.py  test_attachment_labels.py  test_message_length.py  test_reaction_sync.py  test_routes_cli.py  test_startup_diagnostics.py
